--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -1,5 +1,6 @@
 plugins {
-    id 'com.android.application'
+    id 'com.android.library'
+    id 'kotlin-kapt'
     id 'kotlin-android'
 }
 
@@ -7,7 +8,6 @@ android {
     compileSdk 31
 
     defaultConfig {
-        applicationId "com.kdn.module"
         minSdk 21
         targetSdk 31
         versionCode 1
@@ -32,6 +32,14 @@ android {
 }
 
 dependencies {
+
+    implementation(DaggerHilt.DAGGER_HILT)
+    kapt(DaggerHilt.DAGGER_HILT_COMPILER)
+    implementation(DaggerHilt.DAGGER_HILT_VIEW_MODEL)
+    kapt(DaggerHilt.DAGGER_HILT_ANDROIDX_COMPILER)
+    implementation(KTX.CORE)
+    implementation(AndroidX.APP_COMPAT)
+    implementation(Google.MATERIAL)
 
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.3.1'
