--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -1,13 +1,16 @@
 plugins {
-    id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-kapt'
+    id 'dagger.hilt.android.plugin'
 }
+
+apply plugin: 'com.android.application'
+apply plugin: "androidx.navigation.safeargs.kotlin"
 
 android {
     compileSdk 31
 
     defaultConfig {
-        applicationId "com.kdn.presentation"
         minSdk 21
         targetSdk 31
         versionCode 1
@@ -29,16 +32,39 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    dataBinding{
+        enabled true
+    }
 }
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.3.2'
-    implementation 'androidx.appcompat:appcompat:1.3.1'
-    implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    // dager hilt
+    implementation(DaggerHilt.DAGGER_HILT)
+    kapt(DaggerHilt.DAGGER_HILT_COMPILER)
+    implementation(DaggerHilt.DAGGER_HILT_VIEW_MODEL)
+    kapt(DaggerHilt.DAGGER_HILT_ANDROIDX_COMPILER)
+
+    // ViewModel
+    implementation(AndroidX.LIFECYCLE_VIEW_MODEL)
+
+    implementation platform('com.google.firebase:firebase-bom:28.4.1')
+    implementation 'com.google.firebase:firebase-auth-ktx'
+    implementation 'androidx.core:core-ktx:1.6.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
+    implementation 'com.google.firebase:firebase-auth:21.0.1'
+    implementation 'com.google.firebase:firebase-auth-ktx:21.0.1'
+    implementation 'com.google.firebase:firebase-messaging:22.0.0'
+    implementation 'com.google.firebase:firebase-storage:20.0.0'
+    implementation 'com.google.firebase:firebase-storage-ktx:20.0.0'
+    implementation 'com.google.firebase:firebase-database:20.0.2'
+    implementation 'com.google.firebase:firebase-database-ktx:20.0.2'
+
+
+    //nav component
+    implementation(NavComponent.NAVIGATION_FRAGMENT)
+    implementation(NavComponent.NAVIGATION_UI)
+    implementation(NavComponent.NAVIGATION_DYNAMIC_FEATURES_FRAGMENT)
+    androidTestImplementation(NavComponent.NAVIGATION_TESTING)
+    implementation(NavComponent.NAVIGATION_COMPOSE)
 }
