--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -6,6 +6,7 @@ plugins {
 
 apply plugin: 'com.android.application'
 apply plugin: "androidx.navigation.safeargs.kotlin"
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdk 31
@@ -38,9 +39,23 @@ android {
 }
 
 dependencies {
+    implementation platform('com.google.firebase:firebase-bom:28.4.1')
+    implementation 'com.google.firebase:firebase-auth-ktx'
+    implementation 'androidx.core:core-ktx:1.6.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
+    implementation 'com.google.firebase:firebase-auth:21.0.1'
+    implementation 'com.google.firebase:firebase-auth-ktx:21.0.1'
+    implementation 'com.google.firebase:firebase-messaging:22.0.0'
+    implementation 'com.google.firebase:firebase-storage:20.0.0'
+    implementation 'com.google.firebase:firebase-storage-ktx:20.0.0'
+    implementation 'com.google.firebase:firebase-database:20.0.2'
+    implementation 'com.google.firebase:firebase-database-ktx:20.0.2'
 
     // dager hilt
     implementation(DaggerHilt.DAGGER_HILT)
+    implementation 'com.google.firebase:firebase-firestore-ktx:24.0.0'
+    implementation project(path: ':data')
+    implementation project(path: ':domain')
     kapt(DaggerHilt.DAGGER_HILT_COMPILER)
     implementation(DaggerHilt.DAGGER_HILT_VIEW_MODEL)
     kapt(DaggerHilt.DAGGER_HILT_ANDROIDX_COMPILER)
