--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -56,6 +56,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore-ktx:24.0.0'
     implementation project(path: ':data')
     implementation project(path: ':domain')
+    implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation 'com.google.android.material:material:1.4.0'
     kapt(DaggerHilt.DAGGER_HILT_COMPILER)
     implementation(DaggerHilt.DAGGER_HILT_VIEW_MODEL)
     kapt(DaggerHilt.DAGGER_HILT_ANDROIDX_COMPILER)
