--- a/presentation/src/main/AndroidManifest.xml
+++ b/presentation/src/main/AndroidManifest.xml
@@ -4,18 +4,20 @@
     package="com.kdn.presentation">
 
     <application
+        android:name=".MainActivity"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:name=".MainActivity"
         android:theme="@style/Theme.Design.Light.NoActionBar">
 
         <activity
             android:name=".ui.main.activity.MainFunActivity"
             android:exported="false" />
+
         <activity
+            android:theme="@style/SplashTheme"
             android:name=".ui.setting.activity.SettingActivity"
             android:exported="true">
 
@@ -24,13 +26,11 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
-
 
         <activity
             android:name=".MainActivity"
-            android:exported="true"/>
+            android:exported="true" />
     </application>
 
 </manifest>
